--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
         <div class="w3-display-middle title" style="white-space:nowrap;">
             <span class="w3-center w3-black w3-xlarge w3-wide">
                 <span class="w3-hide-small">HELLO, I'M</span>
-                <span> SCOT RENZ.</span>
+                <span> DEMETRE GROWETTE.</span>
                 <br>
-                <span class="w3-hide-small"> FULL STACK WEB DEVELOPER</span>
+                <span class="w3-hide-small"> FRONT-END WEB DEVELOPER</span>
             </span>
         </div>
     </div>
@@ -53,7 +53,7 @@
     <div class=" w3-container w3-padding-64" id="portfolio">
         <div class="section bg1"></div>
         <br>
-        <h3 class="w3-center">MY WORK</h3>
+        <h3 class="w3-center">MY CREATIONS</h3>
         <p class="w3-center">
             <em>Here are some of my latest projects.
         </p>
@@ -62,34 +62,31 @@
         <div class="w3-row-padding w3-center w3-section">
             <div class="w3-col m4">
                 <div class="card">
-                    <img class="card__img" src="assets/pictures/get-lost-screenshot-1.png" alt="Get Lost">
-                    <h2 class="card__title">Get Lost</h2>
-                    <p class="card__text">Hiking app utilizing Firebase and API calls to allow a user to find, store,
-                        and track their favorite hiking trails.</p>
-                    <a class="card__btn" href="https://github.com/scotrenz/GetLost" target="_blank" class="">Demo</a>
+                    <img class="card__img" src="assets/pic/ctvlogosm.jpg" alt="Get Lost">
+                    <h2 class="card__title">CTV Radio</h2>
+                    <p class="card__text">Independent Radio Station webpage that will soon have merch to purchase.</p>
+                    <a class="card__btn" href="https://github.com/scotrenz/GetLost" target="_blank" class="">URL</a>
                     <a class="card__btn" href="https://github.com/GetLost-Project/GetLost-Project" target="_blank"
                         class=""><i class="fa fa-github fa-2x"></i></a>
                 </div>
             </div>
             <div class="w3-col m4">
                 <div class="card">
-                    <img class="card__img" src="assets/pictures/natours-screenshot-1.png" alt="Adventours Website">
-                    <h2 class="card__title">Adventours</h2>
-                    <p class="card__text">Frontend design for an adventure tour company. Experimenting with properties
-                        of CSS and Sass. </p>
-                    <a class="card__btn" href="https://scotrenz.github.io/Adventours/" target="_blank" class="">Demo</a>
+                    <img class="card__img" src="assets/pic/plenty.png" alt="Adventours Website">
+                    <h2 class="card__title">Plenty.</h2>
+                    <p class="card__text">This is a Full-Stack recipe app that helps the uswer find recipes based off the ingredients they currently have in the house.</p>
+                    <a class="card__btn" href="https://scotrenz.github.io/Adventours/" target="_blank" class="">URL</a>
                     <a class="card__btn" href="https://github.com/scotrenz/Adventours" target="_blank" class=""><i
                             class="fa fa-github fa-2x"></i></a>
                 </div>
             </div>
             <div class="w3-col m4">
                 <div class="card">
-                    <img class="card__img" src="assets/pictures/brushworks-screenshot-1.png" alt="Brushworks Website">
-                    <h2 class="card__title">Brushworks</h2>
-                    <p class="card__text">Website built for a painting company to display their work, send out
-                        estimates, and funnel in new clients.</p>
+                    <img class="card__img" src="assets/pic/consolethis.png" alt="Brushworks Website">
+                    <h2 class="card__title">Console This</h2>
+                    <p class="card__text">This app was designed to help the user find the latest gaming consoles close to their location.</p>
                     <a class="card__btn" href="https://scotrenz.github.io/Brushworks-Painting/" target="_blank"
-                        class="">Demo</a>
+                        class="">URL</a>
                     <a class="card__btn" href="https://github.com/scotrenz/Brushworks-Painting" target="_blank"
                         class=""><i class="fa fa-github fa-2x"></i></a>
                 </div>
@@ -98,37 +95,34 @@
         <div class="w3-row-padding w3-center w3-section">
             <div class="w3-col m4">
                 <div class="card">
-                    <img class="card__img" src="assets/pictures/crypto-tracker-screenshot-1.png" alt="Crypto Tracker">
-                    <h2 class="card__title">Crypto Tracker</h2>
-                    <p class="card__text">React app that allows user to track crypto currency prices and set a price
-                        watch to recieve an alert.</p>
+                    <img class="card__img" src="assets/pic/quick-quack2.png" alt="Crypto Tracker">
+                    <h2 class="card__title">Quick Quack Quiz</h2>
+                    <p class="card__text">This is a Full-Stack application that allows the users to take, make, and share their own quizzes.</p>
                     <a class="card__btn" href="https://tranquil-savannah-22908.herokuapp.com/" target="_blank"
-                        class="">Demo</a>
+                        class="">URL</a>
                     <a class="card__btn" href="https://github.com/Crypto-Tracker/Crypto-Tracker" target="_blank"
                         class=""><i class="fa fa-github fa-2x"></i></a>
                 </div>
             </div>
             <div class="w3-col m4">
                 <div class="card">
-                    <img class="card__img" src="assets/pictures/article-tracker-screenshot-1.png"
+                    <img class="card__img" src="assets/pic/budget.png"
                         alt="New York Times Saver">
-                    <h2 class="card__title">Article Saver</h2>
-                    <p class="card__text">React app to scrape NYT articles and allow a user to save and leave notes on
-                        ones that interest them.</p>
-                    <a class="card__btn" href="https://frozen-thicket-67612.herokuapp.com/savedArticles" target="_blank"
-                        class="">Demo</a>
-                    <a class="card__btn" href="https://github.com/scotrenz/Article-Saver" target="_blank" class=""><i
+                    <h2 class="card__title">Budget Tracker</h2>
+                    <p class="card__text">An app that allows you to set and track your monthly budgets.</p>
+                    <a class="card__btn" href="" class="" target="_blank" disabled>Not Currently Hosted</a>
+                    <a class="card__btn" href="https://github.com/Trane7/PWA-budget-tracker" target="_blank" class=""><i
                             class="fa fa-github fa-2x"></i></a>
                 </div>
             </div>
             <div class="w3-col m4">
                 <div class="card">
-                    <img class="card__img" src="assets/pictures/verify-screenshot-1.png" alt="Verify Project">
-                    <h2 class="card__title">Verify</h2>
-                    <p class="card__text">Proof of concept app for tracking user's health and preventing spread of
-                        transmittable diseases.</p>
-                    <a class="card__btn" href="" class="" target="_blank" disabled>Not Currently Hosted</a>
-                    <a class="card__btn" href="https://github.com/rutgersProject2/project_2" target="_blank" class=""><i
+                    <img class="card__img" src="assets/pic/virtual.png" alt="Verify Project">
+                    <h2 class="card__title">Virtual Notes</h2>
+                    <p class="card__text">An app that keeps track of your notes.</p>
+                    <a class="card__btn" href="https://virtualnote.herokuapp.com/" target="_blank"
+                        class="">URL</a>
+                    <a class="card__btn" href="https://github.com/Trane7/virtual-notes" target="_blank" class=""><i
                             class="fa fa-github fa-2x"></i></a>
                 </div>
             </div>
