--- a/index.html
+++ b/index.html
@@ -247,10 +247,6 @@
     <div class="w3-content w3-container w3-padding-64" id="contact">
         <h3 class="w3-center">WHERE I WORK</h3>
         <div class="w3-row w3-padding-32 w3-section">
-            <div class="w3-col m4 w3-container">
-                <!-- Add Google Maps -->
-                <div id="googleMap" class="w3-round-large w3-greyscale" style="width:100%;height:400px;"></div>
-            </div>
             <div class="w3-col m8 w3-panel">
                 <div class="w3-large w3-margin-bottom">
                     <i class="fa fa-map-marker fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> New York, US
@@ -288,19 +284,15 @@
     <!-- Footer -->
     <footer class="w3-center w3-black w3-padding-64">
         <div class="w3-xlarge w3-section">
-            <a href="https://github.com/scotrenz" target="_blank"><i class="fa fa-github w3-hover-opacity"></i></a>
-            <a href="https://stackoverflow.com/users/8324079/scot-renz" target="_blank"><i
-                    class="fa fa-stack-overflow w3-hover-opacity"></i></a>
-            <a href="https://codepen.io/scotrenz/" target="_blank"><i class="fa fa-codepen w3-hover-opacity"></i></a>
-            <a href="https://www.linkedin.com/in/scot-renz-84113653/" target="_blank"><i
+            <a href="https://github.com/Trane7/" target="_blank"><i class="fa fa-github w3-hover-opacity"></i></a>
+            <a href="https://docs.google.com/document/d/1Rl9pXG5k9HlEfBj2H5fiDfvbMp3aPS6vNDCwy3IiuS8/edit#" target="_blank"><i class="fa fa-file w3-hover-opacity"></i></a>
+            <a href="https://www.linkedin.com/in/demetre-growette-0776a7b7/" target="_blank"><i
                     class="fa fa-linkedin w3-hover-opacity"></i></a>
         </div>
-        <div>Scot Renz&copy;</div>
+        <div>Demetre Growette&copy;</div>
     </footer>
 
     <script type="text/javascript" src="js/logic.js"></script>
-    <script
-        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAmNX29rk_tbFqoDWIyYCg5TglI2OP8Xnk&callback=myMap"></script>
 </body>
 
 </html>
