changed background pictures in style.css file

--- a/index.html
+++ b/index.html
@@ -74,7 +74,8 @@
                 <div class="card">
                     <img class="card__img" src="assets/pic/plenty.png" alt="Adventours Website">
                     <h2 class="card__title">Plenty.</h2>
-                    <p class="card__text">This is a Full-Stack recipe app that helps the uswer find recipes based off the ingredients they currently have in the house.</p>
+                    <p class="card__text">This is a Full-Stack recipe app that helps the uswer find recipes based off
+                        the ingredients they currently have in the house.</p>
                     <a class="card__btn" href="https://scotrenz.github.io/Adventours/" target="_blank" class="">URL</a>
                     <a class="card__btn" href="https://github.com/scotrenz/Adventours" target="_blank" class=""><i
                             class="fa fa-github fa-2x"></i></a>
@@ -84,7 +85,8 @@
                 <div class="card">
                     <img class="card__img" src="assets/pic/consolethis.png" alt="Brushworks Website">
                     <h2 class="card__title">Console This</h2>
-                    <p class="card__text">This app was designed to help the user find the latest gaming consoles close to their location.</p>
+                    <p class="card__text">This app was designed to help the user find the latest gaming consoles close
+                        to their location.</p>
                     <a class="card__btn" href="https://scotrenz.github.io/Brushworks-Painting/" target="_blank"
                         class="">URL</a>
                     <a class="card__btn" href="https://github.com/scotrenz/Brushworks-Painting" target="_blank"
@@ -97,7 +99,8 @@
                 <div class="card">
                     <img class="card__img" src="assets/pic/quick-quack2.png" alt="Crypto Tracker">
                     <h2 class="card__title">Quick Quack Quiz</h2>
-                    <p class="card__text">This is a Full-Stack application that allows the users to take, make, and share their own quizzes.</p>
+                    <p class="card__text">This is a Full-Stack application that allows the users to take, make, and
+                        share their own quizzes.</p>
                     <a class="card__btn" href="https://tranquil-savannah-22908.herokuapp.com/" target="_blank"
                         class="">URL</a>
                     <a class="card__btn" href="https://github.com/Crypto-Tracker/Crypto-Tracker" target="_blank"
@@ -106,8 +109,7 @@
             </div>
             <div class="w3-col m4">
                 <div class="card">
-                    <img class="card__img" src="assets/pic/budget.png"
-                        alt="New York Times Saver">
+                    <img class="card__img" src="assets/pic/budget.png" alt="New York Times Saver">
                     <h2 class="card__title">Budget Tracker</h2>
                     <p class="card__text">An app that allows you to set and track your monthly budgets.</p>
                     <a class="card__btn" href="" class="" target="_blank" disabled>Not Currently Hosted</a>
@@ -120,8 +122,7 @@
                     <img class="card__img" src="assets/pic/virtual.png" alt="Verify Project">
                     <h2 class="card__title">Virtual Notes</h2>
                     <p class="card__text">An app that keeps track of your notes.</p>
-                    <a class="card__btn" href="https://virtualnote.herokuapp.com/" target="_blank"
-                        class="">URL</a>
+                    <a class="card__btn" href="https://virtualnote.herokuapp.com/" target="_blank" class="">URL</a>
                     <a class="card__btn" href="https://github.com/Trane7/virtual-notes" target="_blank" class=""><i
                             class="fa fa-github fa-2x"></i></a>
                 </div>
@@ -152,33 +153,33 @@
     <!-- Second Parallax Image with About Text -->
     <div class="bgimg bgimg-2 w3-display-container">
         <div class="w3-display-middle">
-            <span class="w3-xxlarge w3-text-white w3-wide">ABOUT</span>
+            <span class="w3-xxlarge w3-text-black w3-wide">ABOUT</span>
         </div>
     </div>
     <!-- Container (About Section) -->
     <div class="w3-content w3-container w3-padding-64" id="about">
-        <h3 class="w3-center">SCOT RENZ</h3>
+        <h3 class="w3-center">DEMETRE GROWETTE</h3>
         <div class="w3-row">
             <div class="u-margin-top-medium">
                 <div class="w3-col m6 w3-center w3-padding-large">
                     <div class="profile__section-left">
                         <div class="image-responsive">
-                            <img class="w3-image image-responsive__picture" src="assets/pictures/barcelonabeach.jpg"
+                            <img class="w3-image image-responsive__picture" src="assets/pic/me5.png"
                                 alt="Photo of Me" width="500" height="333">
                             <div class="image-responsive__overlay">
                                 <h2></h2>
                                 <p class="image-responsive__overlay--set1">
-                                    <a href="https://www.linkedin.com/in/scot-renz-84113653/" target="_blank"><i
+                                    <a href="https://www.linkedin.com/in/demetre-growette-0776a7b7/" target="_blank"><i
                                             class="fa fa-linkedin"></i></a>
-                                    <a href="https://github.com/scotrenz" target="_blank"><i
+                                    <a href="https://github.com/Trane7" target="_blank"><i
                                             class="fa fa-github"></i></a>
                                 </p>
                                 <hr>
                                 <hr>
                                 <p class="image-responsive__overlay--set2">
                                     <a href="https://codepen.io/scotrenz/" target="_blank"><i
-                                            class="fa fa-codepen"></i></a>
-                                    <a href="https://stackoverflow.com/users/8324079/scot-renz" target="_blank"><i
+                                            class="fa fa-file"></i></a>
+                                    <a href="" target="_blank"><i
                                             class="fa fa-stack-overflow"></i></a>
                                 </p>
                             </div>
@@ -190,21 +191,16 @@
                     <div class="profile__section-right">
                         <div class="text-box">
                             <div class="text-box__section text-box__section-default">
-                                <h4 class="text-box__section--title">Constantly Curious, Consistently Coding</h4>
+                                <h4 class="text-box__section--title">Constantly Hungry, Consistently Coding</h4>
                                 <div class="text-box__section--content">
                                     <p>
-                                        Always looking for new challenges and tirelessly honing my craft, I'm a full
-                                        stack developer with an eye for detail and a
-                                        mind for solutions. My background is diverse. From growing up in the midwest and
-                                        going to school for aerospace engineering, working as an actor and model in New
-                                        York,
-                                        quelling my entreprenurial spirit running my own fitness company, and now
-                                        pursuing
-                                        the future in tech and it's immeasurable opportunity to shape society. I have
-                                        had
-                                        the honor to work with and learn from great developers and I can't wait to
-                                        tackle
-                                        what's next.
+                                        Welcome! Thank you for taking the time out of your day to view my
+                                        progress so far. My name is Demetre Growette, I am a very outgoing
+                                        individual who is easy to work with and tends to make work life more
+                                        exciting. Last year I decided that I needed a change of direction and
+                                        am finally pursing something that I believe is right path for me. In
+                                        order to better myself, I chose to enter the world of coding and push
+                                        to become what everyone else told me I couldn't. Always hungry to learn new things!
                                     </p>
                                 </div>
                             </div>
@@ -212,11 +208,9 @@
                                 <h4 class="text-box__section--title">Why Tech?</h4>
                                 <div class="text-box__section--content">
                                     <p>
-                                        My love of code stems from my life long passion for building. I grew up
-                                        renovating homes, working on cars, and fixing the
-                                        things that are broken. I've never found anything more satisfying and I'll
-                                        always
-                                        have a little of that blue collar streak.
+                                        My love of code stems from my life long passion for problem solving. I have a 
+                                        extensive background in warehousing where there is always some sort of problem that
+                                        needs solving. It also stems from my ocd of not leaving a problem unsolved. 
                                     </p>
                                 </div>
                             </div>
@@ -224,10 +218,9 @@
                                 <h4 class="text-box__section--title">My Skills</h4>
                                 <div class="text-box__section--content">
                                     <p>
-                                        My skillset consists of HTML, CSS, Sass, Javascript, jQuery, React, Redux,
-                                        NodeJS, MySQL, and MongoDB. Currently exploring
-                                        VR with ReactVR and building a VR workspace so I can get this big desk out of my
-                                        apartment.
+                                        My skillset consists of HTML5,
+                                        CSS3, JavaScript, JQuery, Sass, Express.js, Handlebars.js, MongoDB, MySQL, Git &
+                                        React.js.
                                     </p>
                                 </div>
                             </div>
@@ -245,23 +238,22 @@
     </div>
     <!-- Container (Contact Section) -->
     <div class="w3-content w3-container w3-padding-64" id="contact">
-        <h3 class="w3-center">WHERE I WORK</h3>
+        <h3 class="w3-center">Where to contact me.</h3>
         <div class="w3-row w3-padding-32 w3-section">
             <div class="w3-col m8 w3-panel">
                 <div class="w3-large w3-margin-bottom">
-                    <i class="fa fa-map-marker fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> New York, US
+                    <i class="fa fa-map-marker fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> Sacramento, CA
                     <br>
-                    <i class="fa fa-phone fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> Phone: (319)
-                    830-2192
+                    <i class="fa fa-phone fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> Phone: (612)
+                    860-9181
                     <br>
                     <i class="fa fa-envelope fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> Email:
-                    scotrenz@gmail.com
+                    Dgrowette@gmail.com
                     <br>
                 </div>
-                <p>Swing by for a cup of
-                    <i class="fa fa-coffee"></i>, or leave me a note:
+                <p>Feel free to leave me a note:
                 </p>
-                <form id="contact-form" method="POST" action="https://formspree.io/scotrenz@gmail.com">
+                <form id="contact-form" method="POST" action="https://formspree.io/dgrowette@gmail.com">
                     <div class="w3-row-padding" style="margin:0 -16px 8px -16px">
                         <div class="w3-half">
                             <input class="w3-input w3-border" type="text" placeholder="Name" required name="Name">
@@ -285,7 +277,8 @@
     <footer class="w3-center w3-black w3-padding-64">
         <div class="w3-xlarge w3-section">
             <a href="https://github.com/Trane7/" target="_blank"><i class="fa fa-github w3-hover-opacity"></i></a>
-            <a href="https://docs.google.com/document/d/1Rl9pXG5k9HlEfBj2H5fiDfvbMp3aPS6vNDCwy3IiuS8/edit#" target="_blank"><i class="fa fa-file w3-hover-opacity"></i></a>
+            <a href="https://docs.google.com/document/d/1Rl9pXG5k9HlEfBj2H5fiDfvbMp3aPS6vNDCwy3IiuS8/edit#"
+                target="_blank"><i class="fa fa-file w3-hover-opacity"></i></a>
             <a href="https://www.linkedin.com/in/demetre-growette-0776a7b7/" target="_blank"><i
                     class="fa fa-linkedin w3-hover-opacity"></i></a>
         </div>
