finalized color theme and adjusted some background sizes

--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
                 <div class="card">
                     <img class="card__img" src="assets/pic/plenty.png" alt="Adventours Website">
                     <h2 class="card__title">Plenty.</h2>
-                    <p class="card__text">This is a Full-Stack recipe app that helps the uswer find recipes based off
-                        the ingredients they currently have in the house.</p>
+                    <p class="card__text">A Full-Stack recipe app that helps the uswer find recipes based off
+                        the ingredients they currently have.</p>
                     <a class="card__btn" href="https://scotrenz.github.io/Adventours/" target="_blank" class="">URL</a>
                     <a class="card__btn" href="https://github.com/scotrenz/Adventours" target="_blank" class=""><i
                             class="fa fa-github fa-2x"></i></a>
@@ -121,7 +121,7 @@
                 <div class="card">
                     <img class="card__img" src="assets/pic/virtual.png" alt="Verify Project">
                     <h2 class="card__title">Virtual Notes</h2>
-                    <p class="card__text">An app that keeps track of your notes.</p>
+                    <p class="card__text">An app that keeps track of your personal virtual notes.</p>
                     <a class="card__btn" href="https://virtualnote.herokuapp.com/" target="_blank" class="">URL</a>
                     <a class="card__btn" href="https://github.com/Trane7/virtual-notes" target="_blank" class=""><i
                             class="fa fa-github fa-2x"></i></a>
@@ -238,7 +238,7 @@
     </div>
     <!-- Container (Contact Section) -->
     <div class="w3-content w3-container w3-padding-64" id="contact">
-        <h3 class="w3-center">Where to contact me.</h3>
+        <h3 class="w3-center">How to contact me.</h3>
         <div class="w3-row w3-padding-32 w3-section">
             <div class="w3-col m8 w3-panel">
                 <div class="w3-large w3-margin-bottom">
