--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
                 </div>
                 <p>Feel free to leave me a note:
                 </p>
-                <form id="contact-form" method="POST" action="https://formspree.io/dgrowette@gmail.com">
+                <form id="contact-form" method="POST" action="https://formspree.io/f/xqkjedld">
                     <div class="w3-row-padding" style="margin:0 -16px 8px -16px">
                         <div class="w3-half">
                             <input class="w3-input w3-border" type="text" placeholder="Name" required name="Name">
