fixed picture overlay

--- a/index.html
+++ b/index.html
@@ -169,18 +169,19 @@
                             <div class="image-responsive__overlay">
                                 <h2></h2>
                                 <p class="image-responsive__overlay--set1">
+                                    <a href="https://github.com/Trane7" target="_blank"><i
+                                        class="fa fa-github"></i></a>
                                     <a href="https://www.linkedin.com/in/demetre-growette-0776a7b7/" target="_blank"><i
                                             class="fa fa-linkedin"></i></a>
-                                    <a href="https://github.com/Trane7" target="_blank"><i
-                                            class="fa fa-github"></i></a>
+                                    
                                 </p>
                                 <hr>
                                 <hr>
                                 <p class="image-responsive__overlay--set2">
-                                    <a href="https://codepen.io/scotrenz/" target="_blank"><i
+                                    <a href="https://docs.google.com/document/d/1Rl9pXG5k9HlEfBj2H5fiDfvbMp3aPS6vNDCwy3IiuS8/edit#heading=h.628phil8unj9" target="_blank"><i
                                             class="fa fa-file"></i></a>
-                                    <a href="" target="_blank"><i
-                                            class="fa fa-stack-overflow"></i></a>
+                                    <a href="https://github.com/Trane7/PortfolioFinal" target="_blank"><i
+                                            class="fa fa-github"></i></a>
                                 </p>
                             </div>
                         </div>
