fixed some spelling errors

--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
                                         progress so far. My name is Demetre Growette, I am a very outgoing
                                         individual who is easy to work with and tends to make work life more
                                         exciting. Last year I decided that I needed a change of direction and
-                                        am finally pursing something that I believe is right path for me. In
+                                        am finally pursuing something that I believe is the right path for me. In
                                         order to better myself, I chose to enter the world of coding and push
                                         to become what everyone else told me I couldn't. Always hungry to learn new things!
                                     </p>
