--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
                     <img class="card__img" src="assets/pic/ctvlogosm.jpg" alt="Get Lost">
                     <h2 class="card__title">CTV Radio</h2>
                     <p class="card__text">Independent Radio Station webpage that will soon have merch to purchase.</p>
-                    <a class="card__btn" href="https://github.com/scotrenz/GetLost" target="_blank" class="">URL</a>
-                    <a class="card__btn" href="https://github.com/GetLost-Project/GetLost-Project" target="_blank"
+                    <a class="card__btn" href="" target="_blank" class="">URL</a>
+                    <a class="card__btn" href="https://github.com/Trane7/ctvradio" target="_blank"
                         class=""><i class="fa fa-github fa-2x"></i></a>
                 </div>
             </div>
@@ -76,8 +76,8 @@
                     <h2 class="card__title">Plenty.</h2>
                     <p class="card__text">A Full-Stack recipe app that helps the uswer find recipes based off
                         the ingredients they currently have.</p>
-                    <a class="card__btn" href="https://scotrenz.github.io/Adventours/" target="_blank" class="">URL</a>
-                    <a class="card__btn" href="https://github.com/scotrenz/Adventours" target="_blank" class=""><i
+                    <a class="card__btn" href="" target="_blank" class="">URL</a>
+                    <a class="card__btn" href="" target="_blank" class=""><i
                             class="fa fa-github fa-2x"></i></a>
                 </div>
             </div>
@@ -87,9 +87,9 @@
                     <h2 class="card__title">Console This</h2>
                     <p class="card__text">This app was designed to help the user find the latest gaming consoles close
                         to their location.</p>
-                    <a class="card__btn" href="https://scotrenz.github.io/Brushworks-Painting/" target="_blank"
+                    <a class="card__btn" href="" target="_blank"
                         class="">URL</a>
-                    <a class="card__btn" href="https://github.com/scotrenz/Brushworks-Painting" target="_blank"
+                    <a class="card__btn" href="" target="_blank"
                         class=""><i class="fa fa-github fa-2x"></i></a>
                 </div>
             </div>
@@ -101,9 +101,9 @@
                     <h2 class="card__title">Quick Quack Quiz</h2>
                     <p class="card__text">This is a Full-Stack application that allows the users to take, make, and
                         share their own quizzes.</p>
-                    <a class="card__btn" href="https://tranquil-savannah-22908.herokuapp.com/" target="_blank"
+                    <a class="card__btn" href="" target="_blank"
                         class="">URL</a>
-                    <a class="card__btn" href="https://github.com/Crypto-Tracker/Crypto-Tracker" target="_blank"
+                    <a class="card__btn" href="" target="_blank"
                         class=""><i class="fa fa-github fa-2x"></i></a>
                 </div>
             </div>
