--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     <img class="card__img" src="assets/pic/ctvlogosm.jpg" alt="Get Lost">
                     <h2 class="card__title">CTV Radio</h2>
                     <p class="card__text">Independent Radio Station webpage that will soon have merch to purchase.</p>
-                    <a class="card__btn" href="" target="_blank" class="">URL</a>
+                    <a class="card__btn" href="https://trane7.github.io/ctvradio/" target="_blank" class="">URL</a>
                     <a class="card__btn" href="https://github.com/Trane7/ctvradio" target="_blank"
                         class=""><i class="fa fa-github fa-2x"></i></a>
                 </div>
@@ -76,8 +76,8 @@
                     <h2 class="card__title">Plenty.</h2>
                     <p class="card__text">A Full-Stack recipe app that helps the uswer find recipes based off
                         the ingredients they currently have.</p>
-                    <a class="card__btn" href="" target="_blank" class="">URL</a>
-                    <a class="card__btn" href="" target="_blank" class=""><i
+                    <a class="card__btn" href="https://plenty-in-the-pantry.herokuapp.com/" target="_blank" class="">URL</a>
+                    <a class="card__btn" href="https://github.com/Trane7/Recipe-app" target="_blank" class=""><i
                             class="fa fa-github fa-2x"></i></a>
                 </div>
             </div>
@@ -87,9 +87,9 @@
                     <h2 class="card__title">Console This</h2>
                     <p class="card__text">This app was designed to help the user find the latest gaming consoles close
                         to their location.</p>
-                    <a class="card__btn" href="" target="_blank"
+                    <a class="card__btn" href="https://github.com/Trane7/Console-This" target="_blank"
                         class="">URL</a>
-                    <a class="card__btn" href="" target="_blank"
+                    <a class="card__btn" href="https://trane7.github.io/Console-This/" target="_blank"
                         class=""><i class="fa fa-github fa-2x"></i></a>
                 </div>
             </div>
@@ -101,9 +101,9 @@
                     <h2 class="card__title">Quick Quack Quiz</h2>
                     <p class="card__text">This is a Full-Stack application that allows the users to take, make, and
                         share their own quizzes.</p>
-                    <a class="card__btn" href="" target="_blank"
+                    <a class="card__btn" href="https://quick-quack-quiz.herokuapp.com/" target="_blank"
                         class="">URL</a>
-                    <a class="card__btn" href="" target="_blank"
+                    <a class="card__btn" href="https://github.com/Trane7/Quick-Quack-Quiz" target="_blank"
                         class=""><i class="fa fa-github fa-2x"></i></a>
                 </div>
             </div>
