added to my bio section

--- a/index.html
+++ b/index.html
@@ -198,10 +198,7 @@
                                         Welcome! Thank you for taking the time out of your day to view my
                                         progress so far. My name is Demetre Growette, I am a very outgoing
                                         individual who is easy to work with and tends to make work life more
-                                        exciting. Last year I decided that I needed a change of direction and
-                                        am finally pursuing something that I believe is the right path for me. In
-                                        order to better myself, I chose to enter the world of coding and push
-                                        to become what everyone else told me I couldn't. Always hungry to learn new things!
+                                        exciting.  Always hungry to learn new things!
                                     </p>
                                 </div>
                             </div>
@@ -211,7 +208,7 @@
                                     <p>
                                         My love of code stems from my life long passion for problem solving. I have a 
                                         extensive background in warehousing where there is always some sort of problem that
-                                        needs solving. It also stems from my ocd of not leaving a problem unsolved. 
+                                        needs solving. It also stems from my OCD of not leaving a problem unsolved. 
                                     </p>
                                 </div>
                             </div>
@@ -221,7 +218,7 @@
                                     <p>
                                         My skillset consists of HTML5,
                                         CSS3, JavaScript, JQuery, Sass, Express.js, Handlebars.js, MongoDB, MySQL, Git &
-                                        React.js.
+                                        React.js, Node.js, MySQL, SQL.
                                     </p>
                                 </div>
                             </div>
