added to my bio section

--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
                                 <div class="text-box__section--content">
                                     <p>
                                         My skillset consists of HTML5,
-                                        CSS3, JavaScript, JQuery, Sass, Express.js, Handlebars.js, MongoDB, MySQL, Git &
+                                        CSS3, SCSS JavaScript, JQuery, Sass, Express.js, Handlebars.js, MongoDB, MySQL, Git &
                                         React.js, Node.js, MySQL, SQL.
                                     </p>
                                 </div>
