added new projects

--- a/index.html
+++ b/index.html
@@ -70,17 +70,29 @@
                         class=""><i class="fa fa-github fa-2x"></i></a>
                 </div>
             </div>
+
             <div class="w3-col m4">
                 <div class="card">
-                    <img class="card__img" src="assets/pic/plenty.png" alt="Adventours Website">
-                    <h2 class="card__title">Plenty.</h2>
-                    <p class="card__text">A Full-Stack recipe app that helps the uswer find recipes based off
-                        the ingredients they currently have.</p>
-                    <a class="card__btn" href="https://plenty-in-the-pantry.herokuapp.com/" target="_blank" class="">URL</a>
-                    <a class="card__btn" href="https://github.com/Trane7/Recipe-app" target="_blank" class=""><i
+                    <img class="card__img" src="/" alt="Adventours Website">
+                    <h2 class="card__title">IDoYouDo</h2>
+                    <p class="card__text">A React App that allows you to make ToDo lists with progress bars.</p>
+                    <a class="card__btn" href="/" target="_blank" class="">URL</a>
+                    <a class="card__btn" href="https://github.com/Trane7/I-do-you-do" target="_blank" class=""><i
                             class="fa fa-github fa-2x"></i></a>
                 </div>
             </div>
+
+            <div class="w3-col m4">
+                <div class="card">
+                    <img class="card__img" src="/" alt="Adventours Website">
+                    <h2 class="card__title">Write It Down</h2>
+                    <p class="card__text">A Nice JavaScript app that allows you to write down some "sticky notes".</p>
+                    <a class="card__btn" href="" target="_blank" class="">URL</a>
+                    <a class="card__btn" href="https://github.com/Trane7/write-it-down" target="_blank" class=""><i
+                            class="fa fa-github fa-2x"></i></a>
+                </div>
+            </div>
+            
             <div class="w3-col m4">
                 <div class="card">
                     <img class="card__img" src="assets/pic/consolethis.png" alt="Brushworks Website">
@@ -97,13 +109,12 @@
         <div class="w3-row-padding w3-center w3-section">
             <div class="w3-col m4">
                 <div class="card">
-                    <img class="card__img" src="assets/pic/quick-quack2.png" alt="Crypto Tracker">
-                    <h2 class="card__title">Quick Quack Quiz</h2>
-                    <p class="card__text">This is a Full-Stack application that allows the users to take, make, and
-                        share their own quizzes.</p>
-                    <a class="card__btn" href="https://quick-quack-quiz.herokuapp.com/" target="_blank"
+                    <img class="card__img" src="/" alt="Crypto Tracker">
+                    <h2 class="card__title">Ultimate Quizzer</h2>
+                    <p class="card__text">A fun little coding quiz.</p>
+                    <a class="card__btn" href="https://trane7.github.io/Ultimate-quizer/" target="_blank"
                         class="">URL</a>
-                    <a class="card__btn" href="https://github.com/Trane7/Quick-Quack-Quiz" target="_blank"
+                    <a class="card__btn" href="https://github.com/Trane7/Ultimate-quizer" target="_blank"
                         class=""><i class="fa fa-github fa-2x"></i></a>
                 </div>
             </div>
@@ -114,16 +125,6 @@
                     <p class="card__text">An app that allows you to set and track your monthly budgets.</p>
                     <a class="card__btn" href="" class="" target="_blank" disabled>Not Currently Hosted</a>
                     <a class="card__btn" href="https://github.com/Trane7/PWA-budget-tracker" target="_blank" class=""><i
-                            class="fa fa-github fa-2x"></i></a>
-                </div>
-            </div>
-            <div class="w3-col m4">
-                <div class="card">
-                    <img class="card__img" src="assets/pic/virtual.png" alt="Verify Project">
-                    <h2 class="card__title">Virtual Notes</h2>
-                    <p class="card__text">An app that keeps track of your personal virtual notes.</p>
-                    <a class="card__btn" href="https://virtualnote.herokuapp.com/" target="_blank" class="">URL</a>
-                    <a class="card__btn" href="https://github.com/Trane7/virtual-notes" target="_blank" class=""><i
                             class="fa fa-github fa-2x"></i></a>
                 </div>
             </div>
@@ -197,11 +198,12 @@
                                     <p>
                                         Welcome! Thank you for taking the time out of your day to view my
                                         progress so far. My name is Demetre Growette, I am a very outgoing
-                                        individual who is easy to work with and tends to make work life more
-                                        exciting. Last year I decided that I needed a change of direction and
-                                        am finally pursuing something that I believe is the right path for me. In
-                                        order to better myself, I chose to enter the world of coding and push
-                                        to become what everyone else told me I couldn't. Always hungry to learn new things!
+                                        individual, easy to work with, and always willing to learn!
+                                        "Front-End Web Developer driven to build new and more intuitive user experiences in the technology world. 
+                                        A certificate in full stack development from UC Davis, was able to developed skills such as JavaScript, CSS, HTML5, Ract.js and other responsive web design. 
+                                        Referred to as an innovative problem-solver, that is self-motivated, who thrives on fixing issues, and finding new solutions. 
+                                        Passionate about building professional work that best engages the user for an unforgettable experience, 
+                                        while bringing motivation and professionalism into the workplace." 
                                     </p>
                                 </div>
                             </div>
