staged index.html file

--- a/index.html
+++ b/index.html
@@ -73,9 +73,8 @@
             <div class="w3-col m4">
                 <div class="card">
                     <img class="card__img" src="assets/pic/plenty.png" alt="Adventours Website">
-                    <h2 class="card__title">Plenty.</h2>
-                    <p class="card__text">A Full-Stack recipe app that helps the uswer find recipes based off
-                        the ingredients they currently have.</p>
+                    <h2 class="card__title">I-do-you-do</h2>
+                    <p class="card__text">A To Do application built using React.js</p>
                     <a class="card__btn" href="https://plenty-in-the-pantry.herokuapp.com/" target="_blank" class="">URL</a>
                     <a class="card__btn" href="https://github.com/Trane7/Recipe-app" target="_blank" class=""><i
                             class="fa fa-github fa-2x"></i></a>
@@ -98,12 +97,11 @@
             <div class="w3-col m4">
                 <div class="card">
                     <img class="card__img" src="assets/pic/quick-quack2.png" alt="Crypto Tracker">
-                    <h2 class="card__title">Quick Quack Quiz</h2>
-                    <p class="card__text">This is a Full-Stack application that allows the users to take, make, and
-                        share their own quizzes.</p>
-                    <a class="card__btn" href="https://quick-quack-quiz.herokuapp.com/" target="_blank"
+                    <h2 class="card__title">Ultimate Quizer</h2>
+                    <p class="card__text">Just a fun little coding quiz!</p>
+                    <a class="card__btn" href="https://trane7.github.io/Ultimate-quizer/" target="_blank"
                         class="">URL</a>
-                    <a class="card__btn" href="https://github.com/Trane7/Quick-Quack-Quiz" target="_blank"
+                    <a class="card__btn" href="https://github.com/Trane7/Ultimate-quizer" target="_blank"
                         class=""><i class="fa fa-github fa-2x"></i></a>
                 </div>
             </div>
