--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
             <div class="w3-col m4">
                 <div class="card">
-                    <img class="card__img" src="/" alt="Adventours Website">
+                    <img class="card__img" src="assets/pic/writeitdown.png" alt="Adventours Website">
                     <h2 class="card__title">Write It Down</h2>
                     <p class="card__text">A Nice JavaScript app that allows you to write down some "sticky notes".</p>
                     <a class="card__btn" href="" target="_blank" class="">URL</a>
@@ -109,7 +109,7 @@
         <div class="w3-row-padding w3-center w3-section">
             <div class="w3-col m4">
                 <div class="card">
-                    <img class="card__img" src="/" alt="Crypto Tracker">
+                    <img class="card__img" src="assets/pic/Capture1.PNG" alt="Crypto Tracker">
                     <h2 class="card__title">Ultimate Quizzer</h2>
                     <p class="card__text">A fun little coding quiz.</p>
                     <a class="card__btn" href="https://trane7.github.io/Ultimate-quizer/" target="_blank"
