test for aligning cards

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                 </div>
             </div>
             
-            <div class="w3-col m4">
+            <div class="w3-row-padding w3-center w3-section">
                 <div class="card">
                     <img class="card__img" src="assets/pic/consolethis.png" alt="Brushworks Website">
                     <h2 class="card__title">Console This</h2>
